--- a/package.json
+++ b/package.json
@@ -32,23 +32,23 @@
     "envify": "~4.0.0",
     "foldero": "~0.1.1",
     "glob": "~7.1.1",
-    "gulp-changed": "~2.0.0",
-    "gulp-cssnano": "~2.1.2",
-    "gulp-data": "~1.2.1",
-    "gulp-eslint": "~3.0.1",
-    "gulp-htmlmin": "~3.0.0",
-    "gulp-if": "~2.0.2",
-    "gulp-imagemin": "~3.1.1",
-    "gulp-jade": "~1.1.0",
-    "gulp-load-plugins": "~1.5.0",
-    "gulp-notify": "~3.0.0",
-    "gulp-plumber": "~1.1.0",
-    "gulp-postcss": "~6.3.0",
-    "gulp-rename": "~1.2.2",
-    "gulp-sourcemaps": "~2.4.1",
-    "gulp-stylus": "~2.6.0",
-    "gulp-uglify": "~2.0.1",
-    "gulp-util": "~3.0.8",
+    // "gulp-changed": "~2.0.0",
+    // "gulp-cssnano": "~2.1.2",
+    // "gulp-data": "~1.2.1",
+    // "gulp-eslint": "~3.0.1",
+    // "gulp-htmlmin": "~3.0.0",
+    // "gulp-if": "~2.0.2",
+    // "gulp-imagemin": "~3.1.1",
+    // "gulp-jade": "~1.1.0",
+    // "gulp-load-plugins": "~1.5.0",
+    // "gulp-notify": "~3.0.0",
+    // "gulp-plumber": "~1.1.0",
+    // "gulp-postcss": "~6.3.0",
+    // "gulp-rename": "~1.2.2",
+    // "gulp-sourcemaps": "~2.4.1",
+    // "gulp-stylus": "~2.6.0",
+    // "gulp-uglify": "~2.0.1",
+    // "gulp-util": "~3.0.8",
     "imagemin-pngquant": "~5.0.0",
     "imagemin-svgo": "~5.2.0",
     "jade": "~1.11.0",
