--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "build": "NODE_ENV=production gulp --production"
   },
   "engines": {
-    "node": ">=10.17.0"
+    "node": "10.17.0"
   },
   "//": "CUSTOM CONFIGURATION",
   "config": {
