--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gulp-if": "~2.0.2",
     "gulp-imagemin": "~3.1.1",
     "gulp-jade": "~1.1.0",
-    "gulp-load-plugins": "~1.5.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "~3.0.0",
     "gulp-plumber": "~1.1.0",
     "gulp-postcss": "~6.3.0",
