--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "jquery": "^3.4.1",
-    "normalize.css": "~5.0.0"
+    "normalize.css": "~5.0.0",
+    "gulp-load-plugins": "^1.6.0"
   },
   "devDependencies": {
     "autoprefixer": "~6.7.5",
@@ -23,7 +24,7 @@
     "gulp-if": "~2.0.2",
     "gulp-imagemin": "~3.1.1",
     "gulp-jade": "~1.1.0",
-    "gulp-load-plugins": "^1.5.0",
+    "gulp-load-plugins": "^1.6.0",
     "gulp-notify": "~3.0.0",
     "gulp-plumber": "~1.1.0",
     "gulp-postcss": "~6.3.0",
