--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "a-yellow-yurt",
   "version": "0.0.1",
+  "engines": {
+    "node": "10.x "
+  }
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
